--- a/AuthApi/appsettings.json
+++ b/AuthApi/appsettings.json
@@ -14,9 +14,7 @@
     "Database": "postgres"
   },
   "JwtSettings": {
-    "SecretKey": "llavesecreta",
-    "Issuer": "RegisterSystem",
-    "Audience": "RegisteredUsers"
+    "SecretKey": "llavesecreta"
   },
   "EmailSettings": {
     "UserEmail": "emailcorreo",
