--- a/AuthApi/appsettings.json
+++ b/AuthApi/appsettings.json
@@ -18,10 +18,9 @@
   },
   "EmailSettings": {
     "UserEmail": "emailcorreo",
-    "SmptServer": "server",
     "UserName": "name",
     "UserApiKey": "key",
-    "Port": 465
+    "Host": "localhost"
   }
 }
 
